--- a/HiLabWeb-cn/publications.html
+++ b/HiLabWeb-cn/publications.html
@@ -31,12 +31,12 @@
                      <ul class="nav"> 
                         <li><a href="index.html">首页</a></li>
                         <li><a href="people.html">成员</a></li>
-                        <li><a href="research.html">研究</a></li>
+                        <!-- <li><a href="research.html">研究</a></li> -->
                         <li class="active"><a href="#">出版物</a></li>
-                        <li><a href="activity.html">活动</a></li>
-                        <li><a href="news.html">新闻</a></li>
-                        <li><a href="teaching.html">教学</a></li>
-                        <li><a href="contact.html">联系方式</a></li>
+                        <!-- <li><a href="activity.html">活动</a></li> -->
+                        <!-- <li><a href="news.html">新闻</a></li> -->
+                        <!-- <li><a href="teaching.html">教学</a></li> -->
+                        <!-- <li><a href="contact.html">联系方式</a></li> -->
                      </ul>
                   </div>
                </div>
