--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
                   <ul class="nav">
                      <li class="active"><a href="#">Home</a></li>
                      <li><a href="people.html">People</a></li>
-                     <li><a href="research.html">Research</a></li>
+                     <!-- <li><a href="research.html">Research</a></li> -->
                      <li><a href="publications.html">Publications</a></li>
-                     <li><a href="activity.html">Activity</a></li>
-                     <li><a href="news.html">News</a></li>
-                     <li><a href="teaching.html">Teaching</a></li>
-                     <li><a href="contact.html">Contact</a></li>
+                     <!-- <li><a href="activity.html">Activity</a></li> -->
+                     <!-- <li><a href="news.html">News</a></li> -->
+                     <!-- <li><a href="teaching.html">Teaching</a></li> -->
+                     <!-- <li><a href="contact.html">Contact</a></li> -->
                   </ul>
                </div>
             </div>
@@ -51,7 +51,6 @@
                      <img src="images/ani-kolleshi-crop3.JPG" class="carousel-image" alt="">
                      <div class="carousel-caption">
                         <h4>Welcome to the Hangzhou Dianzi University Hi Laboratory</h4>
-                        <!-- -->
                         <p></p>
                      </div>
                   </div>
@@ -76,7 +75,7 @@
          </div>
       </div>
       <hr>
-      
+         <!--
          <div class="container-fluid">
             <div class="row-fluid marketing">
                <div class="span12">
@@ -195,6 +194,7 @@
                </div>
             </div>
          </div>
+           -->
    </div>
    <footer id="footer">
       <div class="container-fluid">
