--- a/HiLabWeb-cn/people.html
+++ b/HiLabWeb-cn/people.html
@@ -34,12 +34,12 @@
                   <ul class="nav">
                      <li><a href="index.html">首页</a></li>
                      <li class="active"><a href="#">成员</a></li>
-                     <li><a href="research.html">研究</a></li>
+                     <!-- <li><a href="research.html">研究</a></li> -->
                      <li><a href="publications.html">出版物</a></li>
-                     <li><a href="activity.html">活动</a></li>
-                     <li><a href="news.html">新闻</a></li>
-                     <li><a href="teaching.html">教学</a></li>
-                     <li><a href="contact.html">联系方式</a></li>
+                     <!-- <li><a href="activity.html">活动</a></li> -->
+                     <!-- <li><a href="news.html">新闻</a></li> -->
+                     <!-- <li><a href="teaching.html">教学</a></li> -->
+                     <!-- <li><a href="contact.html">联系方式</a></li> -->
                   </ul>
                </div>
             </div>
@@ -168,6 +168,7 @@
                <div class="page-header">
                   <h3>本科生</h3>
                </div>
+               <!-- 
                <div class="row-fluid">
                   <div class="span3">
                      <a href="https://unsplash.com/photos/unr5ZqXXvqU" class="thumbnail">
@@ -276,6 +277,7 @@
                         tellus faucibus imperdiet facilisis et quam.</p>
                   </div>
                </div>
+                -->
             </section>
          </div>
       </div>
