--- a/people.html
+++ b/people.html
@@ -32,12 +32,12 @@
                      <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li class="active"><a href="#">People</a></li>
-                        <li><a href="research.html">Research</a></li>
+                        <!-- <li><a href="research.html">Research</a></li> -->
                         <li><a href="publications.html">Publications</a></li>
-                        <li><a href="activity.html">Activity</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <!-- <li><a href="activity.html">Activity</a></li> -->
+                        <!-- <li><a href="news.html">News</a></li> -->
+                        <!-- <li><a href="teaching.html">Teaching</a></li> -->
+                        <!-- <li><a href="contact.html">Contact</a></li> -->
                      </ul>
                   </div>
                </div>
@@ -147,6 +147,7 @@
                   <div class="page-header">
                      <h3>Undergraduate Students</h3>
                   </div>
+                  <!--  
                   <div class="row-fluid">
                      <div class="span3">
                         <a href="https://unsplash.com/photos/unr5ZqXXvqU" class="thumbnail">
@@ -242,6 +243,7 @@
                         <p>Jessica is currently a second year undergraduate student in the Mechanical Engineering Department at VAS. She is studying Fusce et ullamcorper sapien. Integer tristique magna sed tellus faucibus imperdiet facilisis et quam.</p>
                      </div>
                   </div>
+                  -->
                </section>
             </div>
          </div>
