--- a/publications.html
+++ b/publications.html
@@ -31,12 +31,12 @@
                      <ul class="nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="people.html">People</a></li>
-                        <li><a href="research.html">Research</a></li>
+                        <!-- <li><a href="research.html">Research</a></li> -->
                         <li class="active"><a href="#">Publications</a></li>
-                        <li><a href="activity.html">Activity</a></li>
-                        <li><a href="news.html">News</a></li>
-                        <li><a href="teaching.html">Teaching</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <!-- <li><a href="activity.html">Activity</a></li> -->
+                        <!-- <li><a href="news.html">News</a></li> -->
+                        <!-- <li><a href="teaching.html">Teaching</a></li> -->
+                        <!-- <li><a href="contact.html">Contact</a></li> -->
                      </ul>
                   </div>
                </div>
