--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
    <p style="text-align: right">
-      <a href="https://yyuyunke.github.io/HiLabWeb-cn/index.html" target="_self" style=" color: #448ef6">
+      <a href="./HiLabWeb-cn/index.html" target="_self" style=" color: #448ef6">
          中文...
       </a>
    </p>
